use custom java arguments for better performance by default